--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="張勻瑄的個人履歷，簡介、學經歷與專長" />
+        <meta name="李孟衍的個人履歷，簡介、學經歷與專長" />
         <meta name="author" content="張勻瑄" />
         <title>李孟衍的個人履歷</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        張勻瑄
-                        <span class="text-primary">Chang Yun Hsuan</span>
+                        李孟衍
+                        <span class="text-primary">Meng Yang Lee</span>
                     </h1>
                     <div class="subheading mb-5">
                         台北市文山區木柵路一段17巷1號 · (04) 8315701 ·
