--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                         台北市文山區木柵路一段17巷1號 · (04) 8315701 ·
                         <a href="mailto:name@email.com">A109070056@mail.shu.edu.tw</a>
                     </div>
-                    <p class="lead mb-5">我對於網頁設計非常有興趣，此外我也喜歡拍照與攝影，喜歡走到戶外用影像記錄生活，也喜歡在家裡研究程式設計。
-                    <p class="lead mb-5">I am very interested in web design. In addition, I also like taking pictures and photography. I like to go outdoors and record my life with images. I also like to study programming at home..</p>
+                    <p class="lead mb-5">我是李孟衍，宜蘭人，與我新鮮的肝目前邁入第19個年頭。
+                    <p class="lead mb-5">從舞台劇接觸到音樂，再從舞蹈延伸到影視，有點過度斜槓的高中生活，
+                    <p class="lead mb-5">目前就讀於世新大學資訊傳播學系，人生就是差那五分和廣電系擦肩而過。</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
@@ -64,7 +65,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
+                            <h3 class="mb-0">a</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
