--- a/index.html
+++ b/index.html
@@ -65,7 +65,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">a</h3>
+                            <h3 class="mb-0">2019 羅東高中 四社成發 「青春驛站」  - 攝影
+2019 羅東高中 街頭文化社成發 「Spotlight」 - 攝影
+2019 東北一中 fREE STYLE BATTLE VOL.2 - 攝影
+2019 粽邪 2 : 魁降 首映會幕後花絮 - 攝影
+2019 第二屆【我的未來我作主】微電影競賽 「妳還有我」  - 副導演
+2020 第三屆【我的未來我作主】微電影競賽 「清白早餐 」  - 副導演
+2020 羅東高中 姉妹校式典「你還有我 そばにいるから」 - 攝影
+2020 羅東高中畢業歌 「瞇眼睛 」- 錄音、混音
+2020 羅東高中畢業直播典禮 - 攝影
+2020 蘭陽魂街頭舞蹈大賽 - 攝影
+2020 宜蘭街頭文化藝術節 - 攝影
+2020 CA91 Grand Opening/After Party 活動精華 - 攝影
+2020 宜!蘭人聖誕市集 - 動態影像紀錄</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
