--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">2019 羅東高中 四社成發 「青春驛站」  - 攝影
+                            <h3 class="mb-0">攝影</h3>
+                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <p>2019 羅東高中 四社成發 「青春驛站」  - 攝影
 2019 羅東高中 街頭文化社成發 「Spotlight」 - 攝影
 2019 東北一中 fREE STYLE BATTLE VOL.2 - 攝影
 2019 粽邪 2 : 魁降 首映會幕後花絮 - 攝影
@@ -77,9 +79,7 @@
 2020 蘭陽魂街頭舞蹈大賽 - 攝影
 2020 宜蘭街頭文化藝術節 - 攝影
 2020 CA91 Grand Opening/After Party 活動精華 - 攝影
-2020 宜!蘭人聖誕市集 - 動態影像紀錄</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+2020 宜!蘭人聖誕市集 - 動態影像紀錄</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
