--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <span class="text-primary">Meng Yang Lee</span>
                     </h1>
                     <div class="subheading mb-5">
-                        台北市文山區木柵路一段17巷1號 · (04) 8315701 ·
+                        台北市文山區木柵路一段17巷1號 · (0970-640664) ·
                         <a href="mailto:name@email.com">A109070056@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5">我是李孟衍，宜蘭人，與我新鮮的肝目前邁入第19個年頭。
@@ -109,21 +109,19 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">學習歷程</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <h3 class="mb-0">世新大學</h3>
+                            <div class="subheading mb-3">資訊傳播學系</div>
                             <div>Computer Science - Web Development Track</div>
                             <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020-</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">羅東高中</h3>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
