--- a/index.html
+++ b/index.html
@@ -48,20 +48,17 @@
                         <span class="text-primary">Meng Yang Lee</span>
                     </h1>
                     <div class="subheading mb-5">
-                        台北市文山區木柵路一段17巷1號 · (0970-640664) ·
+                        <b>台北市文山區木柵路一段17巷1號 · (0970-640664) ·
                         <a href="mailto:name@email.com">A109070056@mail.shu.edu.tw</a>
                     </div>
 					<b>
                     <p class="lead mb-5">我是李孟衍，宜蘭人，與我新鮮的肝目前邁入第19個年頭。
                     <p class="lead mb-5">從舞台劇接觸到音樂，再從舞蹈延伸到影視，有點過度斜槓的高中生活，
                     <p class="lead mb-5">目前就讀於世新大學資訊傳播學系，人生就是差那五分和廣電系擦肩而過。</p>
-					<b>
                     </p>
                     </p>My name is Meng Yang , Lee . I am currently studying at SHU.
                     </p>I have wide range interest ,music drama and film are my favorire things .
                     </p>It's my portfolios .
-       
-                    
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
