--- a/index.html
+++ b/index.html
@@ -113,16 +113,14 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學</h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2020-</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020 -</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">羅東高中</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 2017 - 2020</span></div>
                     </div>
                 </div>
             </section>
