--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="subheading mb-3">平面攝影 / 動態紀錄</div>
                             <p>2019 羅東高中 四社成發 「青春驛站」  - 攝影
 <p>2019 羅東高中 街頭文化社成發 「Spotlight」 - 攝影
-<p>2019 東北一中 fREE STYLE BATTLE VOL.2 - 攝影
+<p>2019 東北一中 FREE STYLE BATTLE VOL.2 - 攝影
 <p>2019 粽邪 2 : 魁降 首映會幕後花絮 - 攝影
 <p>2019 第二屆【我的未來我作主】微電影競賽 「妳還有我」  - 副導演
 <p>2020 第三屆【我的未來我作主】微電影競賽 「清白早餐 」  - 副導演
@@ -87,8 +87,8 @@
 <p>2020 羅東高中畢業直播典禮 - 攝影
 <p>2020 蘭陽魂街頭舞蹈大賽 - 攝影
 <p>2020 宜蘭街頭文化藝術節 - 攝影
-<p>2020 CA91 Grand Opening/After Party 活動精華 - 攝影
-<p>2020 宜!蘭人聖誕市集 - 動態影像紀錄</p>
+<p>2020 CA91 Grand Opening/After Party 活動紀錄 - 動態攝影
+<p>2020 宜!蘭人聖誕市集 活動紀錄 - 動態攝影</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2018 - Present</span></div>
                     </div>
