--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     <h2 class="mb-5">個人技能</h2>
                     <div class="subheading mb-3">程式應用</div>
                     <ul class="list-inline dev-icons">
+					    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
