--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
                     <h2 class="mb-5">個人技能</h2>
                     <div class="subheading mb-3">程式應用</div>
                     <ul class="list-inline dev-icons">
-					<li><img src="assets/img/PS.png><li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><img src=assets/img/PS></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
