--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
                     <h2 class="mb-5">個人技能</h2>
                     <div class="subheading mb-3">程式應用</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><img src=assets/img/PS></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><img src="assets/img/PS.png"></i></li>
+						<li class="list-inline-item"><img src="assets/img/LR.png"></i></li>
+						<li class="list-inline-item"><img src="assets/img/PR.png"></i></li>
+						<li class="list-inline-item"><img src="assets/img/AE.png"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
