--- a/index.html
+++ b/index.html
@@ -129,30 +129,30 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">個人技能</h2>
-                    <div class="subheading mb-3">程式應用</div>
+                    <div class="subheading mb-3"><br>程式應用</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><img src="assets/img/PS.png"width="70" height="70"/></i></li>
 						<li class="list-inline-item"><img src="assets/img/LR.png"width="70" height="70"/></i></li>
 						<li class="list-inline-item"><img src="assets/img/PR.png"width="70" height="70"/></i></li>
 						<li class="list-inline-item"><img src="assets/img/AE.png"width="70" height="70"/></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3"><b>工作能力</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            多工處理
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            善於溝通
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            TQC 英文打字輸入 進階級
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            TQC 中文打字輸入 進階級
                         </li>
                     </ul>
                 </div>
