--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">個人技能</h2>
-                    <div class="subheading mb-3"><br>程式應用</div>
+                    <div class="subheading mb-3"><b>程式應用</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><img src="assets/img/PS.png"width="70" height="70"/></i></li>
 						<li class="list-inline-item"><img src="assets/img/LR.png"width="70" height="70"/></i></li>
@@ -161,9 +161,10 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">個人興趣</h2>
+                    <p>我對影像抱有強烈的感覺，腦子裡流滿了創作的能量，我希望能透過影像說一段故事給大家聽，因此我選擇了紀錄文化和每一刻的瞬間.</p>
+					<p>影像是我的興趣，同時也是陪伴著我成長的過程。</p>
+                    <p class="mb-0">我喜歡拿起相機按下快門的剎那，所有的時間都被凝結在我的底片上，在十年或二十年之後，我可能拿著這段影片和照片說著故事</p>
                 </div>
             </section>
             <hr class="m-0" />
