--- a/index.html
+++ b/index.html
@@ -111,16 +111,17 @@
                     <h2 class="mb-5">學習歷程</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">世新大學</h3>
-                            <div class="subheading mb-3">資訊傳播學系</div>
+                            <h3 class="mb-0">世新大學 Shih Hsin University</h3>
+                            <div class="subheading mb-3">資訊傳播學系 Department of Information and Communications </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2020 -</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - May 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">羅東高中</h3>
+                            <h3 class="mb-0">羅東高中 Lo-Tung Senior High School </h3>
+						    <div class="subheading mb-3">普通科 Gerneral Education</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> 2017 - 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> August 2017 - May 2020</span></div>
                     </div>
                 </div>
             </section>
@@ -163,7 +164,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">個人興趣</h2>
 					<p>影像是我的興趣，同時也是陪伴著我成長的過程。</p>
-                    <p>我對影像抱有強烈的感覺，腦子裡流滿了創作的能量，我希望能透過影像說一段故事給大家聽，因此我選擇了紀錄文化和每一刻的瞬間.</p>
+                    <p>我對影像抱有強烈的感覺，腦子裡流滿了創作的能量，我希望能透過影像說一段故事給大家聽，因此我選擇了紀錄文化和每一刻的瞬間。</p>
                     <p class="mb-0">我喜歡拿起相機按下快門的剎那，所有的時間都被凝結在我的底片上，在十年或二十年之後，我可能拿著這段影片和照片說著故事</p>
                 </div>
             </section>
