--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學習歷程</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">個人技能</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">個人興趣</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">個人專長</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">獲獎紀錄</a></li>
                 </ul>
             </div>
@@ -170,6 +171,39 @@
 					<p>影像是我的興趣，同時也是陪伴著我成長的過程。</p>
                     <p>我對影像抱有強烈的感覺，腦子裡流滿了創作的能量，我希望能透過影像說一段故事給大家聽，因此我選擇了紀錄文化和每一刻的瞬間。</p>
                     <p class="mb-0">我喜歡拿起相機按下快門的剎那，所有的時間都被凝結在我的底片上，在十年或二十年之後，我可能拿著這段影片和照片說著故事</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+			<!-- Specialties-->
+            <section class="resume-section" id="Specialties">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">個人技能</h2>
+                    <div class="subheading mb-3"><b>程式應用</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><img src="assets/img/PS.png"width="70" height="70"/></i></li>
+						<li class="list-inline-item"><img src="assets/img/LR.png"width="70" height="70"/></i></li>
+						<li class="list-inline-item"><img src="assets/img/PR.png"width="70" height="70"/></i></li>
+						<li class="list-inline-item"><img src="assets/img/AE.png"width="70" height="70"/></i></li>
+                    </ul>
+                    <div class="subheading mb-3"><b>工作能力</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            多工處理
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            善於溝通
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            TQC 英文打字輸入 進階級
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            TQC 中文打字輸入 進階級
+                        </li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
