--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@
 			<!-- Specialties-->
             <section class="resume-section" id="Specialties">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">個人技能</h2>
-                    <div class="subheading mb-3"><b>程式應用</div>
+                    <h2 class="mb-5">個人專長</h2>
+                    <div class="subheading mb-3"><b>使用軟體</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><img src="assets/img/PS.png"width="70" height="70"/></i></li>
 						<li class="list-inline-item"><img src="assets/img/LR.png"width="70" height="70"/></i></li>
 						<li class="list-inline-item"><img src="assets/img/PR.png"width="70" height="70"/></i></li>
 						<li class="list-inline-item"><img src="assets/img/AE.png"width="70" height="70"/></i></li>
                     </ul>
-                    <div class="subheading mb-3"><b>工作能力</div>
+                    <div class="subheading mb-3"><b></div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -204,6 +204,20 @@
                             TQC 中文打字輸入 進階級
                         </li>
                     </ul>
+					<table class="table">
+   <tr>
+      <th>T1</th>
+      <th>T2</th>
+      <th>T3</th>
+   </tr>
+   <tr>
+      <td>A1</td>
+      <td>A2</td>
+      <td>A3</td>
+   </tr>
+……
+</table>
+
                 </div>
             </section>
             <hr class="m-0" />
