--- a/index.html
+++ b/index.html
@@ -186,34 +186,14 @@
 						<li class="list-inline-item"><img src="assets/img/AE.png"width="70" height="70"/></i></li>
                     </ul>
                     <div class="subheading mb-3"><b></div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            多工處理
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            善於溝通
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            TQC 英文打字輸入 進階級
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            TQC 中文打字輸入 進階級
-                        </li>
-                    </ul>
 					<table class="table">
    <tr>
-      <th>T1</th>
-      <th>T2</th>
-      <th>T3</th>
+      <th>TQC 英文打字輸入 進階級
+</th>
    </tr>
    <tr>
-      <td>A1</td>
-      <td>A2</td>
-      <td>A3</td>
+      <td>TQC 中文打字輸入 進階級
+</td>
    </tr>
 ……
 </table>
