--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">個人興趣</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">個人專長</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">獲獎紀錄</a></li>
+				    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#FUTURE">未來展望</a></li>
+
                 </ul>
             </div>
         </nav>
@@ -215,6 +217,72 @@
                 </div>
             </section>
         </div>
+		 <section class="resume-section" id="FUTURE">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">UniversityLifeList</h2>
+					<div id="accordion">
+						<div class="card">
+							<div class="card-header">
+								<a class="card-link" data-toggle="collapse" href="#collapseOne">
+									List 清單
+								</a>
+						</div>
+							<div id="collapseOne" class="collapse show" data-parent="#accordion">
+								<div class="card-body">
+									<table class="table table-hover">
+										<thead>
+											<tr>
+												<th>預計達成時間</th>
+												<th>項目</th>
+												<th></th>
+												<th></th>
+												<th></th>
+												<th></th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>打工</td>
+												<td>已達成</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+											</tr>
+											<tr>
+												<td>做頻道</td>
+												<td>2021</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+											</tr>
+											<tr>
+												<td>月入3萬UP</td>
+												<td>2022</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+
+											</tr>
+											<tr>
+												<td>去日本</td>
+												<td>2023</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+                                         </div>
+		</div>
+            </section>
+            <hr class="m-0" />  
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
