--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
         </div>
 		 <section class="resume-section" id="FUTURE">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">UniversityLifeList</h2>
+                    <h2 class="mb-5">未來展望</h2>
 					<div id="accordion">
 						<div class="card">
 							<div class="card-header">
 								<a class="card-link" data-toggle="collapse" href="#collapseOne">
-									List 清單
+									自學及能力發展
 								</a>
 						</div>
 							<div id="collapseOne" class="collapse show" data-parent="#accordion">
@@ -232,8 +232,8 @@
 									<table class="table table-hover">
 										<thead>
 											<tr>
-												<th>預計達成時間</th>
 												<th>項目</th>
+												<th>預計達成時間</th>
 												<th></th>
 												<th></th>
 												<th></th>
@@ -242,7 +242,7 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>打工</td>
+												<td>影像事務所實習</td>
 												<td>已達成</td>
 												<td></td>
 												<td></td>
@@ -250,7 +250,7 @@
 												<td></td>
 											</tr>
 											<tr>
-												<td>做頻道</td>
+												<td>獨立接案製作</td>
 												<td>2021</td>
 												<td></td>
 												<td></td>
@@ -258,7 +258,7 @@
 												<td></td>
 											</tr>
 											<tr>
-												<td>月入3萬UP</td>
+												<td>穩定月收</td>
 												<td>2022</td>
 												<td></td>
 												<td></td>
@@ -267,8 +267,8 @@
 
 											</tr>
 											<tr>
-												<td>去日本</td>
-												<td>2023</td>
+												<td>海外拓展視野</td>
+												<td>2024</td>
 												<td></td>
 												<td></td>
 												<td></td>
