--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">個人專長</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">獲獎紀錄</a></li>
 				    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#FUTURE">未來展望</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#FRIENDS">朋友</a></li>
 
                 </ul>
             </div>
@@ -282,7 +283,22 @@
                                          </div>
 		</div>
             </section>
+			
             <hr class="m-0" />  
+			<section class="resume-section" id="friends">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">FRIENDS</h2>
+			<ul class="fa-ul list-group list-group-flush">
+                                <li class="list-group-item"><a href="https://kobejeter.github.io/">陳冠勳</a></li>
+				<li class="list-group-item"><a href="https://dlwlrmakai.github.io/">鄧晨凱</a></li>
+				<li class="list-group-item"><a href="https://allanchou0629.github.io/">周均達</a></li>
+                    </ul>
+		    </li>
+                </div>
+          </section>       
+        </div>
+            </section>
+            <hr class="m-0" />
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
