--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </p>I have wide range interest ,music drama and film are my favorire things .
                     </p>It's my portfolios .
 					</p>
-					<b>個人作品集網站 <a href="https://motmot.myportfolio.com/work"> <b>
+					<a href="https://motmot.myportfolio.com/work">個人作品集網站 
 					</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
