--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 <p>2020 蘭陽魂街頭舞蹈大賽 - 攝影
 <p>2020 宜蘭街頭文化藝術節 - 攝影
 <p>2020 CA91 Grand Opening/After Party 活動紀錄 - 動態攝影
-<p>2020 宜!蘭人聖誕市集 活動紀錄 - 動態攝影</p>
+<p>2020 宜!蘭人聖誕市集 活動紀錄 - 動態攝影
+<p>2021 Lil Ray - Whatever It Takes feat. Yung Chiao - 攝影助理
 <b>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2018 - Present</span></div>
