--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 <p>2020 CA91 Grand Opening/After Party 活動紀錄 - 動態攝影
 <p>2020 宜!蘭人聖誕市集 活動紀錄 - 動態攝影
 <p>2021 Lil Ray - Whatever It Takes feat. Yung Chiao - 攝影助理
+<p>2021 Art Roastery x Louisa Coffee 收藏展 - 攝影
 <b>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2018 - Present</span></div>
